--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
+Certainly! Here's a simple and friendly HTML template for a 404 error page:
+
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exécuter Python</title>
+    <title>404 Not Found</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            color: #343a40;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+        }
+        h1 {
+            font-size: 3em;
+            margin-bottom: 0.5em;
+        }
+        p {
+            font-size: 1.2em;
+            margin-bottom: 1em;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Exécuter le script Python</h1>
-    <button onclick="window.location.href='/run'">Exécuter run.py</button>
+    <div class="container">
+        <h1>404 Not Found</h1>
+        <p>Oops! The page you're looking for doesn't exist.</p>
+        <p><a href="/">Go back to the homepage</a></p>
+    </div>
 </body>
 </html>
+
+
+This template is designed to be clean and approachable, making users feel supported even when they encounter an error. Feel free to customize the text and styles to better fit your website's theme!
